@@ -1,5 +1,5 @@
 Package: lfactors
-Version: 1.0.1
+Version: 1.0.2
 Date: 2017-04-18
 Title: Factors with Levels
 Authors@R: c(person("Paul", "Bailey", role=c("aut", "cre"), email="pbailey@air.org"))
